add interceptor on the login to check

--- a/src/main/webapp/linkedin.html
+++ b/src/main/webapp/linkedin.html
@@ -172,11 +172,32 @@
 							<input id="commandValue" style="margin-left: 15px; width: 40%";>
 						</div>
 						<div  class="col-xs-12 col-md-8" style="margin-bottom: 10px; margin-top: 20px";>
-							<a href="#" class="btn btn-primary btn-xs"  id="sharecommand">Post Comments</a>
+							<a href="#" class="btn btn-primary btn-xs"  id="commentCompany">Post Comments</a>
 						</div>
 						<div  class="col-xs-12 col-md-8" id="comment" ></div>
 					</div></td>
 				</tr>
+				<tr >
+					<td>
+					<div class="social-tableCenter">
+						<p class="text-center">
+							<strong><h4>POST Share Comment</h4></strong>
+						</p>
+						<p>
+							<small>Updates the authenticating user's current status,share something.</small>
+						</p>
+					</div><td class="">
+					<div class="social-table-btnContainer">
+						<div  class="col-md-10" >
+							Status :<input id="commentValue" style="margin-left: 15px; width: 40%";>
+						</div>
+						<div  class="col-xs-12 col-md-8" style="margin-bottom: 10px; margin-top: 20px";>
+							<a href="#" class="btn btn-primary btn-xs"  id="shareComment">Share</a>
+						</div>
+						<div  class="col-xs-12 col-md-8 " id="commentStatus" ></div>
+					</div></td>
+				</tr>				
+				
 				<tr >
 					<td>
 					<div class="social-tableCenter">
